--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
+								<h1>Halò agus fàilte! (Hello and welcome!)</h1>
 								<h1>A. Fraser Gillan</h1>
 								<p>Astrophysicist and Planetary Scientist</p>
 							</div>
