--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#About Me">Intro</a></li>
 								<li><a href="#My Research">Work</a></li>
-								<li><a href="#Hobbies">About</a></li>
+								<li><a href="#Hobbies and Interests">About</a></li>
 								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
