--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#About Me">Intro</a></li>
-								<li><a href="#My Research">Work</a></li>
-								<li><a href="#Hobbies and Interests">About</a></li>
+								<li><a href="#About Me">About Me</a></li>
+								<li><a href="#My Research">My Research</a></li>
+								<li><a href="#Hobbies and Interests">Hobbies and Interests</a></li>
 								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
