--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="fa-duotone fa-solid fa-comet"></i>"></span>
+							<span class="fa-solid fa-meteor"></i>"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
