--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="About Me">
+							<article name="About Me">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p> I completed my BSc in Astrophysics at the University of Central Lancashire (2015–2019), where my undergraduate project focused on calculating the orbits and properties of near-Earth asteroids using data from the 0.7m Moses Holden Telescope (MHT) at Alston Observatory.</p>
