--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#About Me">About Me</a></li>
+								<li><a href="#Biography">Biography</a></li>
 								<li><a href="#Research">Research</a></li>
 								<li><a href="#Hobbies">Hobbies</a></li>
 								<li><a href="#Contact">Contact</a></li>
@@ -44,8 +44,8 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article name="About Me">
-								<h2 class="major">About Me</h2>
+							<article id="Biography">
+								<h2 class="major">Biography</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p> I completed my BSc in Astrophysics at the University of Central Lancashire (2015–2019), where my undergraduate project focused on calculating the orbits and properties of near-Earth asteroids using data from the 0.7m Moses Holden Telescope (MHT) at Alston Observatory.</p>
 							</article>
