--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 								<h2 class="major">Biography</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p> I completed my BSc in Astrophysics at the University of Central Lancashire (2015–2019), where my undergraduate project focused on calculating the orbits and properties of near-Earth asteroids using data from the 0.7m Moses Holden Telescope (MHT) at Alston Observatory.</p>
+								<p> My interest in small solar system bodies led me to continue my studies with an MSc by Research in Astrophysics at UCLan (2019–2020). For this project, I designed and implemented an automatic detection system to search for solar system objects in data from NASA's STEREO mission.</p>
+								<p>Excited to continue exploring small solar system bodies, I began my PhD at Queen's University Belfast in October 2021. My research focused on Jupiter-family comets, where I conducted the largest study to date of their activity using ATLAS data to monitor their dust production rates as they approached perihelion. In addition, during an observing run at the Isaac Newton Telescope (INT) in November 2022, I used deep imaging to investigate asteroids on Jupiter-crossing orbits, searching for subtle cometary activity caused by low-level sublimation that are typically too faint to be detected by typical survey imaging. I completed my PhD in December 2024.</p>
 							</article>
 
 						<!-- Work -->
