--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="Biography">
 								<h2 class="major">Biography</h2>
 								<span class="image main"><img src="images/me_at_int.jpg" alt="" /></span>
-								<p> Standing in front of the Isaac Newton Telescope after an observing run in November 2022, working on my PhD research.</p>
+								<p> ABOVE IMAGE: Standing in front of the Isaac Newton Telescope after an observing run in November 2022, working on my PhD research.</p>
 								<p></p>
 								<p> I completed my BSc in Astrophysics at the University of Central Lancashire (UCLan; 2015–2019), where my undergraduate project focused on calculating the orbits and properties of near-Earth asteroids using data from the 0.7m Moses Holden Telescope (MHT) at Alston Observatory.</p>
 								<p> My interest in small solar system bodies led me to continue my studies with an MSc (by Research) in Astrophysics at UCLan (2019–2020). For this project, I designed and implemented an automatic detection system to search for solar system objects in data from NASA's STEREO mission.</p>
