--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Halò agus fàilte! (Hello and welcome!)</h1>
-								<h1>A. Fraser Gillan</h1>
+								<h1 class="small-name">Dr. A. Fraser Gillan</h1>
+
 								<p>Astrophysicist and Planetary Scientist</p>
 							</div>
 						</div>
