--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/ESA_Rosetta_NavCam_20150131_Mosaic.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. <a href="https://example.com">Click here</a> Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. <a href="Fraser_Gillan_CV_2025.pdf" target="_blank">CV</a>Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris</p>
+								<ul>
+   									<li><a href="Fraser_Gillan_CV_2025.pdf" target="_blank">Curriculum Vitae (CV)</a></li>
+								</ul>
+								<p>aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
 						<!-- About -->
