--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<!-- Work -->
 							<article id="Research">
 								<h2 class="major">Research</h2>
-								<span class="image main"><img src="images/ESA_Rosetta_NavCam_20150131_Mosaic.jpg" alt="" /></span>
+								<span class="image main"><img src="images/67P_ATLAS_website.pdf" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. <a href="https://example.com">Click here</a> Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. <a href="Fraser_Gillan_CV_2025.pdf" target="_blank">CV</a>Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris</p>
 								<ul>
