--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<p>aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 								<p>Publications</p>
 								<ul>
-									<li><a href="https://iopscience.iop.org/article/10.3847/PSJ/ad1394" target="_blank">Dust Production Rates in Jupiter-family Comets: A Two Year Study with ATLAS Photometry</a></li>
+									<li><a href="https://iopscience.iop.org/article/10.3847/PSJ/ad1394" target="_blank">A. Fraser Gillan et al 2024 Planet. Sci. J. 5 25: Dust Production Rates in Jupiter-family Comets: A Two Year Study with ATLAS Photometry</a></li>
 
 								</ul>
 
